# squale

./: CMakeLists.txt  README.md  config.h  config.h.in  squale-i18n.h  squale.c  squale.h  squaleclient.c  squaleclient.h  squalejob.c  squalejob.h  squalejoblist.c  squalejoblist.h  squalelistener.c  squalelistener.h  squalelog.c  squalemysqlworker.c  squalemysqlworker.h  squaleoracleworker.c  squaleoracleworker.h  squalepgsqlworker.c  squalepgsqlworker.h  squaleworker.h  squalexml.c  squalexml.h
cmake/: FindGlib.cmake
